--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to Urchmaks'es page!
+description: Feel free to bookmark this to keep in eye late updates!
